<resources>
    <string name="user_componet_app_name">用户组件</string>
    <string name="user_componet_login_title">登录</string>

    <string name="user_componet_activity_login_text_0">您好</string>
    <string name="user_componet_activity_login_text_1">欢迎来到有财有鱼平台</string>
    <string name="user_componet_activity_login_text_2">请输入手机号码</string>
    <string name="user_componet_activity_login_text_3">请输入验证码</string>
    <string name="user_componet_activity_login_text_4">微信登录</string>
    <string name="user_componet_activity_login_text_5">我已阅读并同意</string>
    <string name="user_componet_activity_login_text_6">登录即注册</string>
    <string name="user_componet_login_agreenment">《用户使用协议》《隐私政策》</string>



</resources>